minor fixes in exports; contracts in edges can be null